Updated products descriptions and tweaked About
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -90,22 +90,26 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="GEOPics/owners01.jpg" alt="Picture of the GEO Owners">
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
+                    <img class="img-responsive img-border-left" src="GEOPics/owners01.jpg" style="float: right; padding-left: 10px" alt="Picture of the GEO Owners">
                     <p>
-                        The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to Central Oregon from East-Central Indiana in 2012.
-                        Brian spent the previous decade researching and teaching agricultural and environmental soil sciences and agroecology.  During
-                        that time, he worked with many farmers in their fields and fell in love with farming. But, academia and farming, done right, are
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to
+                        Central Oregon from East-Central Indiana in 2012. Brian spent the previous decade researching and teaching agricultural
+                        and environmental soil sciences and Agroecology.  During that time, he worked with many farmers in their fields and fell
+                        in love with farming.
+                    </p>
+                    <p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;But, academia and farming, done right, are
                         both jobs that require total focus.  So, in 2012, Brian quit his job at Ball State University with the hope of starting a farm.
                         Emily found a job as a speech and language pathologist at St. Charles Hospital in Bend and Brian started looking for land to farm.
-                        In 2014, they found two properties: a somewhat neglected 77-acre hay farm about 25 miles north of Bend right on Highway 97 and
-                        a house with a few acres of pasture just outside Bend.  The Lepores live in the Bend house and commute to the Culver property
-                        (so that Emily can get to her hospital job) and get help on the farm and with kid duties from Brian’s family (Vince (“Grand Pops”),
-                        Gisela (“Omi”) and Bruce, Yuki and Louie (Brian’s brother’s family)) who followed them to Central Oregon.  With Brian’s family all
-                        here (they’re not “all there”) and much of Emily’s family on the west coast, Central Oregon was the perfect place to start their
-                        new farming adventure.
+                    </p>
+                    <p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In 2014, they found two properties: a somewhat neglected 77-acre hay farm about 25 miles
+                        north of Bend right on Highway 97 and a house with a few acres of pasture just outside Bend.  The Lepores live in the Bend
+                        house and commute to the Culver property (so that Emily can get to her hospital job) and get help on the farm and with kid
+                        duties from Brian’s family (Vince (“Grand Pops”), Gisela (“Omi”) and Bruce, Yuki and Louie (Brian’s brother’s family)) who
+                        followed them to Central Oregon.  With Brian’s family all here (they’re not “all there”) and much of Emily’s family on the west
+                        coast, Central Oregon was the perfect place to start their new farming adventure.
                     </p>
                 </div>
                 <div class="clearfix"></div>
@@ -157,17 +161,11 @@
                     <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                         <h3>
-                            Brian Adams
+                            Ryan Moore
                         </h3>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                        <h3>
-                            Ryan Moore
-                        </h3>
-                    </div>
                     <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="GEOPics/gus01.jpg" alt="">
                         <h3>
@@ -180,16 +178,12 @@
                             Claudia Lepore
                         </h3>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4"></div>
                     <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="GEOPics/bodhi01.jpg" alt="">
                         <h3>
                             Bodhi The Dog
                         </h3>
                     </div>
-                    <div class="col-sm-4"></div>
                 </div>
                 <div class="clearfix"></div>
             </div>
