--- a/GoldenEagleOrganics/alfalfa.html
+++ b/GoldenEagleOrganics/alfalfa.html
@@ -128,13 +128,15 @@
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
                     <h3 style="margin-top: 10px">GEO's Alfalfa</h3>
                     <p>
-                        Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        Alfalfa is a perennial flowering plant in the pea family. It is used for grazing, hay and silage. It resembles
+                        clover, with clusters of small purple flowers. Alfalfa is high in protein, calcium, vitamins C/D/E & K.
                     </p>
                     <h3>What We Do</h3>
                     <p>
-                        Short alfalfa description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        In keeping with Oregon Tilth approved regulations, and our own personal caring touch around the farm, GEO
+                        strives to maintain a high standard of alfalfa and fields, with competitive prices. Our mission it to continue
+                        to provide 100% weed free alfalfa and prompt delivery service. It is our goal at GEO to earn your seal of approval
+                        with our alfalfa.
                     </p>
                     <br />
                     <p>Interested in buying from GEO? Click the button below to contact us!</p>
