--- a/GoldenEagleOrganics/beef.html
+++ b/GoldenEagleOrganics/beef.html
@@ -128,13 +128,16 @@
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
                     <h3 style="margin-top: 10px">GEO's Beef</h3>
                     <p>
-                        Short beef description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        Raising cows is a new part of growth for our business, but it has been quite enjoyable and a profitable
+                        experience. Beef can be cut into rib eye steaks, roasts, hanger steaks, short ribs, rump steaks or sirloin
+                        steaks. And often prepared by roasting, grilling, broiling or barbeueing.
                     </p>
                     <h3>What We Do</h3>
                     <p>
-                        Short beef description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        In keeping with USDA Organic approved regulations, and our own personal caring touch around the farm, GEO
+                        strives to maintain a high standard of organic meats with competitive prices. Our cows are 100% grass fed
+                        and given adequate shelter and fields to roam freely. It is our goal at GEO to earn your seal of approval
+                        with our livestock.
                     </p>
                     <br />
                     <p>Interested in buying from GEO? Click the button below to contact us!</p>
