--- a/GoldenEagleOrganics/farming.html
+++ b/GoldenEagleOrganics/farming.html
@@ -86,7 +86,7 @@
                     <hr>
                     <h2 class="intro-text text-center">
                         <strong>CUSTOM</strong>
-                        Farming
+                        Farming Services
                     </h2>
                     <hr>
                 </div>
@@ -137,7 +137,7 @@
                         eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
                     </p>
                     <br />
-                    <p>Interested in buying from GEO? Click the button below to contact us!</p>
+                    <p>Interested in hiring services from GEO? Click the button below to contact us!</p>
                     <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
                 </div>
             </div>
