--- a/GoldenEagleOrganics/hay.html
+++ b/GoldenEagleOrganics/hay.html
@@ -128,13 +128,17 @@
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
                     <h3 style="margin-top: 10px">GEO's Hay</h3>
                     <p>
-                        Short hay description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        We take pride in ensuring our hay is kept dry and harvested from our fields in a timely manner.
+                        Good quality hay is green and not too coarse, and includes plant heads and leaves as well as stems. Hay can
+                        be used as animal fodder when or where there is not enough pasture or rangeland on which to graze your livestock.
+
                     </p>
                     <h3>What We Do</h3>
                     <p>
-                        Short hay description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        In keeping with Oregon Tilth approved regulations, and our own personal caring touch around the farm, GEO
+                        strives to maintain a high standard of grasses and fields, with competitive prices. Our mission it to continue
+                        to provide 100% weed free hay and prompt delivery service. It is our goal at GEO to earn your seal of approval
+                        with our hay.
                     </p>
                     <br />
                     <p>Interested in buying from GEO? Click the button below to contact us!</p>
