--- a/GoldenEagleOrganics/goat.html
+++ b/GoldenEagleOrganics/goat.html
@@ -126,15 +126,18 @@
                     </div>
                 </div>
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-                    <h3 style="margin-top: 10px">GEO's Goat</h3>
+                    <h3 style="margin-top: 10px">GEO's Chevon</h3>
                     <p>
-                        Short goat description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        Often called Chevon when the meat comes from adult goats, and Cabrito or kid when from younger goats.
+                        Chevon is savory and less sweet than beef, but slightly sweeter than lamb. It can be prepared in a
+                        variety of ways, such as barbequed, stewed, minced, curried, grilled, fried, baked or made into sausage.
                     </p>
                     <h3>What We Do</h3>
                     <p>
-                        Short goat description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        In keeping with USDA Organic approved regulations, and our own personal caring touch around the farm, GEO
+                        strives to maintain a high standard of organic meats with competitive prices. Our goats are 100% grass fed
+                        and given adequate shelter and fields to roam freely. It is our goal at GEO to earn your seal of approval
+                        with our livestock.
                     </p>
                     <br />
                     <p>Interested in buying from GEO? Click the button below to contact us!</p>
